test/classes/errors/nilability-init-var/init-var-nonnil-owned-from-oknil-nil.chpl
//  lhs: owned!  rhs: nil?  error: nlb

class MyClass {
  var x: int;
}



var lhs: owned MyClass = nil;
