test/classes/errors/nilability-init-var/init-var-nonnil-owned-from-oknil-nil.good
init-var-nonnil-owned-from-oknil-nil.chpl:9: error: Assigning non-nilable owned to nil
